syntax = "proto3";

package api.book_store.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/9Neechan/book-store/pkg/book_store/v1;book";

service BookV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc UpdatePrice(UpdatePriceRequest) returns (UpdatePriceResponse);
  rpc UpdateAmount(UpdateAmountRequest) returns (UpdateAmountResponse);
}

message BookInfo {
  int64 id = 1;
  string title = 2;
  int64 author_id = 3;
  string genre = 4;
  int64 price = 5;
  int64 amount = 6;
}

message Book {
  BookInfo info = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message CreateRequest {
  BookInfo info = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  Book book = 1;
}

message UpdatePriceRequest {
  int64 id = 1;
  int64 price = 2;  //BookInfo.price
}

message UpdatePriceResponse {
  Book book = 1;
}

message UpdateAmountRequest {
  int64 id = 1;
  int64 amount = 2;  //BookInfo.amount
}

message UpdateAmountResponse {
  Book book = 1;
}